--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
   text-align: center;
   font-size: 2rem;
   font-family: "Lato", sans-serif;
-  width: 80%;
+  width: 100%;
   margin: auto;
 } 
 
@@ -18,7 +18,7 @@ html {
 }
 
 #image {
-  width: 80%;
+  max-width: 100%;
   height: auto;
   margin-left: auto;
   margin-right: auto;
