--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ html {
 
 @media (max-width: 768px) {
   #main {
-    width: 95%;
+    width: 100%;
   }
   img {
-    max-width: 80%;
+    max-width: 100%;
   }
 }
 
@@ -29,18 +29,14 @@ html {
   text-align: left;
 }
 
-img #image {
-  max-width: 80%;
+img {
+  max-width: 100%;
   height: auto;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px;
   display: block;
   line-height: 1.5;
-}
-
-#image {
-  margin-left: 0;
 }
 
 figcaption {
